added next projects

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
-    <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <title>John Teo Portfolio</title>
     <!-- Title is the name you see on the tab/link -->
@@ -19,7 +19,7 @@
   </head>
 
   <!-- Body is the content that people see on the website -->
-  <body style="max-width:960px">
+  <body style="max-width: 960px">
     <nav>
       <div class="navcontent">
         <div>
@@ -43,47 +43,47 @@
     </nav>
 
     <div class="nothome">
-    <div class="aboutwrapper">
-      <div>
-        <h2 class="title">Hello again!</h2>
-        <div class="about">
-          <p class="spacing">My name is John Teo, nice to meet you!</p>
-          <p class="spacing">
-            I am currently a service and interaction designer at
-            <a href="https://www.fjordnet.com/"> Fjord Singapore</a>.
-          </p>
-          <p class="spacing">
-            Previously, I worked as a product designer at
-            <a href="https://www.spgroup.com.sg/"> SP Group</a> and
-            <a href="https://www.dbs.com.sg/"> DBS</a>. In 2016, I co-founded my
-            mini creative studio,
-            <a href="https://www.studioaubergine.design/"> Studio Aubergine</a>,
-            with some friends for all our weird little experiments.
-          </p>
-          <p class="spacing">
-            I love exploring new mediums and industries - from social good to
-            emerging technology - to learn how design and technology can be
-            leveraged to enact positive behavior change.
-          </p>
-          <p class="spacing">
-            If you need to get in touch or want to collaborate on a little
-            experiment, drop me an email at
-            <a
-              href="mailto:teorzjohn@gmail.com?Subject=Hello%20there"
-              target="_top"
-              >teorzjohn@gmail.com</a
-            >
-          </p>
+      <div class="aboutwrapper">
+        <div>
+          <h2 class="title">Hello again!</h2>
+          <div class="about">
+            <p class="spacing">My name is John Teo, nice to meet you!</p>
+            <p class="spacing">
+              I am currently a service and interaction designer at
+              <a href="https://www.fjordnet.com/"> Fjord Singapore</a>.
+            </p>
+            <p class="spacing">
+              Previously, I worked as a product designer at
+              <a href="https://www.spgroup.com.sg/"> SP Group</a> and
+              <a href="https://www.dbs.com.sg/"> DBS</a>. In 2016, I co-founded
+              my mini creative studio,
+              <a href="https://www.studioaubergine.design/"> Studio Aubergine</a
+              >, with some friends for all our weird little experiments.
+            </p>
+            <p class="spacing">
+              I love exploring new mediums and industries - from social good to
+              emerging technology - to learn how design and technology can be
+              leveraged to enact positive behavior change.
+            </p>
+            <p class="spacing">
+              If you need to get in touch or want to collaborate on a little
+              experiment, drop me an email at
+              <a
+                href="mailto:teorzjohn@gmail.com?Subject=Hello%20there"
+                target="_top"
+                >teorzjohn@gmail.com</a
+              >
+            </p>
+          </div>
+        </div>
+        <div class="profileimg">
+          <img
+            class="progressive__img progressive--not-loaded"
+            data-progressive="Images/johnteo.jpg"
+            src="Images/johnteo-s.jpg"
+          />
         </div>
       </div>
-      <div class="profileimg">
-        <img
-          class="progressive__img progressive--not-loaded"
-          data-progressive="Images/johnteo.jpg"
-          src="Images/johnteo-s.jpg"
-        />
-      </div>
-    </div>
     </div>
 
     <footer>
@@ -150,15 +150,15 @@
           </svg>
         </a>
       </div>
-      <span class="copyright">Teo Ren Zhong John © 2020</span>
+      <span class="copyright">Designed and coded by John © 2020</span>
     </footer>
     <script src="https://unpkg.com/progressively/dist/progressively.min.js"></script>
     <script>
       progressively.init({
         delay: 0,
-        onLoadComplete: function() {
+        onLoadComplete: function () {
           console.log("All images loaded!");
-        }
+        },
       });
     </script>
   </body>
