--- a/afford.html
+++ b/afford.html
@@ -19,7 +19,7 @@
   </head>
 
   <!-- Body is the content that people see on the website -->
-  <body style="max-width:960px">
+  <body style="max-width: 960px">
     <nav>
       <div class="navcontent">
         <div>
@@ -45,19 +45,22 @@
     <div class="projectheader">
       <h4>CASE STUDY - 2018</h4>
       <h1>Financial Empowerment <br />in a Cashless Society</h1>
-      <img class="progressive__img progressive--not-loaded"
-      data-progressive="Images/afford-01.jpg"
-      src="Images/afford-01-s.jpg" />
+      <img
+        class="progressive__img progressive--not-loaded"
+        data-progressive="Images/afford-01.jpg"
+        src="Images/afford-01-s.jpg"
+      />
     </div>
     <div class="projectinfo">
       <div class="mainbody-01">
         <p>
-          Afford was designed out of the concern for our tendency to spend 
-          mindlessly with today’s cashless payment processes. Trading convenience 
-          for attention, it emphasizes on the amount we are spending and heightens 
-          our awareness towards it. This is done by activating different senses 
-          within the payment process making users more conscious of the transaction 
-          taking place; to deter users from making another impulse purchase.
+          Afford was designed out of the concern for our tendency to spend
+          mindlessly with today’s cashless payment processes. Trading
+          convenience for attention, it emphasizes on the amount we are spending
+          and heightens our awareness towards it. This is done by activating
+          different senses within the payment process making users more
+          conscious of the transaction taking place; to deter users from making
+          another impulse purchase.
         </p>
         <h5 class="grey02">THE CHALLENGE</h5>
         <h2>
@@ -85,22 +88,24 @@
       </div>
       <div class="mainbody-02">
         <p>
-          To study the effects of mobile-based payments, a total of 30 
-          qualitative interviews were conducted with people from advanced 
-          cashless societies: China, Sweden, United Kingdom, Canada, and Norway. 
-          Many cited the draw to go cashless was due to the convenience that 
-          it affords. However, convenience is a double-edged sword. By making 
-          it effortless, many recognized that it was also easier to spend more 
-          than necessary. Going cashless effectively meant anesthetizing the 
-          pain of paying as it didn’t feel like they were giving up anything, 
-          unlike paying with cash where they had to hand over the bill.
+          To study the effects of mobile-based payments, a total of 30
+          qualitative interviews were conducted with people from advanced
+          cashless societies: China, Sweden, United Kingdom, Canada, and Norway.
+          Many cited the draw to go cashless was due to the convenience that it
+          affords. However, convenience is a double-edged sword. By making it
+          effortless, many recognized that it was also easier to spend more than
+          necessary. Going cashless effectively meant anesthetizing the pain of
+          paying as it didn’t feel like they were giving up anything, unlike
+          paying with cash where they had to hand over the bill.
         </p>
       </div>
     </div>
     <div class="rightcontainer">
-      <img class="captionmb progressive__img progressive--not-loaded" 
-      data-progressive="Images/afford-02.png"
-      src="Images/afford-02-s.jpg" />
+      <img
+        class="captionmb progressive__img progressive--not-loaded"
+        data-progressive="Images/afford-02.png"
+        src="Images/afford-02-s.jpg"
+      />
       <span>Interviewing participants from advanced cashless societies</span>
     </div>
     <div class="mainbody-03">
@@ -114,24 +119,28 @@
       </p>
     </div>
     <div class="rightcontainer">
-      <img class="captionmb progressive__img progressive--not-loaded" 
-      data-progressive="Images/afford-03.jpg"
-      src="Images/afford-03-s.jpg" />
+      <img
+        class="captionmb progressive__img progressive--not-loaded"
+        data-progressive="Images/afford-03.jpg"
+        src="Images/afford-03-s.jpg"
+      />
       <span>Ideation of different payment interactions</span>
     </div>
     <div class="mainbody-03">
       <h5 class="grey">USER TESTING</h5>
       <p>
-        To test the user’s emotional response towards the proposed
-        interactions, a different type of user testing had to be used. Based on
-        the PrEmo tool, instead of relying on the use of words, users selected
-        their emotions with the use of expressive cartoon animations.
+        To test the user’s emotional response towards the proposed interactions,
+        a different type of user testing had to be used. Based on the PrEmo
+        tool, instead of relying on the use of words, users selected their
+        emotions with the use of expressive cartoon animations.
       </p>
     </div>
     <div class="rightcontainer">
-      <img class="captionmb progressive__img progressive--not-loaded" 
-      data-progressive="images/afford-04.png"
-      src="Images/afford-04-s.jpg" />
+      <img
+        class="captionmb progressive__img progressive--not-loaded"
+        data-progressive="images/afford-04.png"
+        src="Images/afford-04-s.jpg"
+      />
       <span>User testing Results: The Experience of Paying</span>
     </div>
     <h3>The Design</h3>
@@ -213,18 +222,17 @@
           </svg>
         </a>
       </div>
-      <span class="copyright">Teo Ren Zhong John © 2020</span>
+      <span class="copyright">Designed and coded by John © 2020</span>
     </footer>
 
     <script src="https://unpkg.com/progressively/dist/progressively.min.js"></script>
     <script>
       progressively.init({
         delay: 0,
-        onLoadComplete: function() {
+        onLoadComplete: function () {
           console.log("All images loaded!");
-        }
+        },
       });
     </script>
-    
   </body>
 </html>
