--- a/dbs.html
+++ b/dbs.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
-    <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <title>John Teo Portfolio</title>
     <!-- Title is the name you see on the tab/link -->
@@ -20,7 +20,7 @@
   </head>
 
   <!-- Body is the content that people see on the website -->
-  <body style="max-width:960px">
+  <body style="max-width: 960px">
     <nav>
       <div class="navcontent">
         <div>
@@ -43,155 +43,165 @@
       </div>
     </nav>
     <div class="nothome">
-    <div class="projectheader">
-      <h4>CASE STUDY - 2017</h4>
-      <h1>Redesigning the ATM</h1>
-      <img class="progressive__img progressive--not-loaded"
-      data-progressive="Images/dbs-01.jpg"
-      src="Images/dbs-01-s.jpg" />
-    </div>
-    <div class="projectinfo">
-      <div class="mainbody-01">
+      <div class="projectheader">
+        <h4>CASE STUDY - 2017</h4>
+        <h1>Redesigning the ATM</h1>
+        <img
+          class="progressive__img progressive--not-loaded"
+          data-progressive="Images/dbs-01.jpg"
+          src="Images/dbs-01-s.jpg"
+        />
+      </div>
+      <div class="projectinfo">
+        <div class="mainbody-01">
+          <p>
+            DBS, the largest bank in South East Asia, was looking to change the
+            design of their ATM+ and BTM+ user interface. Part of a two man
+            team, we covered all the product design needs from research,
+            usability testing, to the interaction and visual design
+            explorations. The designs were developed and rolled out nationwide
+            in the last quarter of 2018.
+          </p>
+        </div>
+        <div class="projectstatus">
+          <p class="primarydetails">My Role</p>
+          <p class="secondarydetails">
+            Wireframing <br />
+            Prototyping <br />
+            User Validation
+          </p>
+          <p class="primarydetails">Team</p>
+          <p class="secondarydetails">
+            Customer Experience, <br />
+            Consumer Banking
+          </p>
+        </div>
+      </div>
+      <h5 class="grey">THE CHALLENGE</h5>
+      <div class="mainbody-06">
+        <h2>
+          To improve the ATM interface by redesigning fundamental elements
+          whilst preparing for future scalability
+        </h2>
+      </div>
+      <div class="projectprogress">
+        <div class="projecttitle">
+          <h3>Glimpse into the Process</h3>
+        </div>
+        <div class="mainbody-02">
+          <p>
+            Prior research was done before we came onboard. However, to have a
+            holistic understanding of the different transactions within the
+            system, we felt that we needed to go down to the ATM+ and BTM+
+            machines to experience all the various transactions first hand.
+            These included common transactions such as withdrawal and depositing
+            of money to the more little-known cases such as cash exchange and
+            card-less transactions. In conjunction, we talked to the team who
+            designed the current system to find out more about the challenges
+            and reasoning behind certain implementations.
+          </p>
+          <h5 class="grey">THE VISUALS</h5>
+          <p>
+            Additionally, a management decision was made to combine both DBS and
+            POSB existing designs for the ATM; moving towards a 'brand-less'
+            screen state. The screens had to look differentiated enough so that
+            it did not look too similar to either of the two brands. In
+            addition, it should not encroach with other banks visual language.
+          </p>
+        </div>
+      </div>
+      <div class="rightcontainer">
+        <img
+          class="captionmb progressive__img progressive--not-loaded"
+          data-progressive="Images/dbs-02.jpg"
+          src="Images/dbs-02-s.jpg"
+        />
+        <span>Studying the various banks visual language</span>
+      </div>
+      <div class="mainbody-03">
         <p>
-          DBS, the largest bank in South East Asia, was looking to change the
-          design of their ATM+ and BTM+ user interface. Part of a two man team,
-          we covered all the product design needs from research, usability
-          testing, to the interaction and visual design explorations. The
-          designs were developed and rolled out nationwide in the last quarter
-          of 2018.
+          Drawing from other existing platforms within the bank ecosystem and
+          from our study of the major banks in Singapore, we decided to
+          experiment with the different tonal value of greys. Grey connoted a
+          sense of maturity and dependability and was a color that was not used
+          by any of the other banks.
         </p>
       </div>
-      <div class="projectstatus">
-        <p class="primarydetails">My Role</p>
-        <p class="secondarydetails">
-          Wireframing <br />
-          Prototyping <br />
-          User Validation
-        </p>
-        <p class="primarydetails">Team</p>
-        <p class="secondarydetails">
-          Customer Experience, <br />
-          Consumer Banking
-        </p>
-      </div>
-    </div>
-    <h5 class="grey">THE CHALLENGE</h5>
-    <div class="mainbody-06">
-      <h2>
-        To improve the ATM interface by redesigning fundamental elements whilst
-        preparing for future scalability
-      </h2>
-    </div>
-    <div class="projectprogress">
-      <div class="projecttitle">
-        <h3>Glimpse into the Process</h3>
-      </div>
-      <div class="mainbody-02">
+      <img
+        class="progressive__img progressive--not-loaded"
+        data-progressive="Images/dbs-03.jpg"
+        src="Images/dbs-03-s.jpg"
+      />
+      <div class="mainbody-03">
+        <h5 class="grey">USER TESTING</h5>
         <p>
-          Prior research was done before we came onboard. However, to have a 
-          holistic understanding of the different transactions within the 
-          system, we felt that we needed to go down to the ATM+ and BTM+ machines 
-          to experience all the various transactions first hand. These included 
-          common transactions such as withdrawal and depositing of money to the 
-          more little-known cases such as cash exchange and card-less transactions. 
-          In conjunction, we talked to the team who designed the current system 
-          to find out more about the challenges and reasoning behind certain 
-          implementations.
-        </p>
-        <h5 class="grey">THE VISUALS</h5>
-        <p>
-          Additionally, a management decision was made to combine both DBS and 
-          POSB existing designs for the ATM; moving towards a 'brand-less' screen 
-          state. The screens had to look differentiated enough so that it did not 
-          look too similar to either of the two brands. In addition, it should 
-          not encroach with other banks visual language.
+          Before rolling out the new system to the public, a group of
+          participants was selected to use, test and provide feedback on the new
+          changes in the ATM+ and BTM+ user interface design. In the hour-long
+          session, participants were provided with a series of tasks (Eg.
+          Withdraw $50 from your POSB Savings Account). Once a task was
+          completed, questions were posed to the participants based on their
+          actions to better understand their thought process. At different
+          points of the task flow, A/B testing was conducted to get a grasp of
+          users' preferences and test the understandability of the screens.
         </p>
       </div>
-    </div>
-    <div class="rightcontainer">
-      <img class="captionmb progressive__img progressive--not-loaded" 
-      data-progressive="Images/dbs-02.jpg"
-      src="Images/dbs-02-s.jpg" />
-      <span>Studying the various banks visual language</span>
-    </div>
-    <div class="mainbody-03">
-      <p>
-        Drawing from other existing platforms within the bank ecosystem and from
-        our study of the major banks in Singapore, we decided to experiment with
-        the different tonal value of greys. Grey connoted a sense of maturity
-        and dependability and was a color that was not used by any of the other
-        banks.
-      </p>
-    </div>
-    <img class="progressive__img progressive--not-loaded"
-    data-progressive="Images/dbs-03.jpg"
-    src="Images/dbs-03-s.jpg" />
-    <div class="mainbody-03">
-      <h5 class="grey">USER TESTING</h5>
-      <p>
-        Before rolling out the new system to the public, a group of participants 
-        was selected to use, test and provide feedback on the new changes in the 
-        ATM+ and BTM+ user interface design. In the hour-long session, participants 
-        were provided with a series of tasks (Eg. Withdraw $50 from your POSB Savings 
-        Account). Once a task was completed, questions were posed to the participants 
-        based on their actions to better understand their thought process. At 
-        different points of the task flow, A/B testing was conducted to get a grasp of 
-        users' preferences and test the understandability of the screens.
-      </p>
-    </div>
-    <div class="rightcontainer">
-      <img class="captionmb progressive__img progressive--not-loaded" 
-      data-progressive="Images/dbs-04.png"
-      src="Images/dbs-04-s.jpg" />
-      <span>Testing the new ATM+ and BTM+ designs</span>
-    </div>
-    <h3>The Design</h3>
-    <div class="projectdesign-01">
-      <div class="designpicture-01">
-        <img class="imageflush" 
-        src="Images/dbs-05.jpg" />
+      <div class="rightcontainer">
+        <img
+          class="captionmb progressive__img progressive--not-loaded"
+          data-progressive="Images/dbs-04.png"
+          src="Images/dbs-04-s.jpg"
+        />
+        <span>Testing the new ATM+ and BTM+ designs</span>
       </div>
-      <div class="mainbody-04">
-        <p>
-          One of the major changes was to include an additional screen before
-          the home screen. Though it adds extra time per transaction to the
-          current flow, it allows for simpler navigation between the different
-          transactions. Besides, it allows for future scalability of the
-          system.
-        </p>
+      <h3>The Design</h3>
+      <div class="projectdesign-01">
+        <div class="designpicture-01">
+          <img class="imageflush" src="Images/dbs-05.jpg" />
+        </div>
+        <div class="mainbody-04">
+          <p>
+            One of the major changes was to include an additional screen before
+            the home screen. Though it adds extra time per transaction to the
+            current flow, it allows for simpler navigation between the different
+            transactions. Besides, it allows for future scalability of the
+            system.
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="projectdesign-02">
-      <div class="mainbody-05">
-        <p>
-          We did a full audit of the system and one of the features that was
-          removed was the ability to change the text size. Users were unaware of
-          the feature and this was backed by data collected whereby the feature
-          was access ~0.03% over 12 months period. Though we removed the
-          feature, we recognized the intention and the need for larger font
-          sizes overall which was implemented in the new design.
-        </p>
+      <div class="projectdesign-02">
+        <div class="mainbody-05">
+          <p>
+            We did a full audit of the system and one of the features that was
+            removed was the ability to change the text size. Users were unaware
+            of the feature and this was backed by data collected whereby the
+            feature was access ~0.03% over 12 months period. Though we removed
+            the feature, we recognized the intention and the need for larger
+            font sizes overall which was implemented in the new design.
+          </p>
+        </div>
+        <div class="designpicture-01">
+          <img class="imageflush" src="Images/dbs-06.jpg" />
+        </div>
       </div>
-      <div class="designpicture-01">
-        <img class="imageflush" 
-        src="Images/dbs-06.jpg" />
+      <div class="projectdesign-01">
+        <div class="designpicture-01">
+          <img class="imageflush" src="Images/dbs-07.jpg" />
+        </div>
+        <div class="mainbody-04">
+          <p>
+            During the user testing, one of the users pointed out that if it was
+            too grey, users might think that the machine is faulty. Thus, we
+            tweaked the grey to be warmer to make it feel more personal and
+            inviting. Furthermore, we decided to add in a colour highlight which
+            was taken from DBS Treasures.
+          </p>
+        </div>
       </div>
     </div>
-    <div class="projectdesign-01">
-      <div class="designpicture-01">
-        <img class="imageflush" 
-        src="Images/dbs-07.jpg" />
-      </div>
-      <div class="mainbody-04">
-        <p>
-          During the user testing, one of the users pointed out that if it was
-          too grey, users might think that the machine is faulty. Thus, we
-          tweaked the grey to be warmer to make it feel more personal and
-          inviting. Furthermore, we decided to add in a colour highlight which
-          was taken from DBS Treasures.
-        </p>
-      </div>
-    </div>
+    <div class="nextproject2">
+      <a href="pivot.html"><h4>← Visualising data</h4></a>
+      <a href="home.html"><h4>Connected-homes in Asia Pacific →</h4></a>
     </div>
     <footer>
       <div>
@@ -257,18 +267,17 @@
           </svg>
         </a>
       </div>
-      <span class="copyright">Teo Ren Zhong John © 2020</span>
+      <span class="copyright">Designed and coded by John © 2020</span>
     </footer>
 
     <script src="https://unpkg.com/progressively/dist/progressively.min.js"></script>
     <script>
       progressively.init({
         delay: 0,
-        onLoadComplete: function() {
+        onLoadComplete: function () {
           console.log("All images loaded!");
-        }
+        },
       });
     </script>
-
   </body>
 </html>
