--- a/doodles.html
+++ b/doodles.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
-    <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <title>John Teo Portfolio</title>
     <!-- Title is the name you see on the tab/link -->
@@ -20,7 +20,7 @@
   </head>
 
   <!-- Body is the content that people see on the website -->
-  <body style="max-width:960px">
+  <body style="max-width: 960px">
     <nav>
       <div class="navcontent">
         <div>
@@ -42,68 +42,85 @@
         </div>
       </div>
     </nav>
-    
+
     <div class="nothome">
+      <h2 class="title">I like playing with interaction ideas</h2>
 
-    <h2 class="title">I like playing with interaction ideas</h2>
-
-    <div class="mainbody-02">
-      <h4 class="subheader">
-        Every now and then I would work on random ideas which also allows me to
-        test new prototyping softwares.
-      </h4>
-    </div>
-
-    <!-- Grid -->
-    <div class="grid">
-      <div class="column  nohover">
-        <img class="gif progressive__img progressive--not-loaded" 
-        data-progressive="Gifs/01.gif"
-        src="Images/gif-01-s.jpg" />
-      </div>
-      <div class="column middle  nohover">
-        <img class="gif progressive__img progressive--not-loaded" 
-        data-progressive="Gifs/02.gif"
-        src="Images/gif-02-s.jpg" />
-      </div>
-      <div class="column  nohover">
-        <img class="gif progressive__img progressive--not-loaded" 
-        data-progressive="Gifs/03.gif"
-        src="Images/gif-03-s.jpg" />
+      <div class="mainbody-02">
+        <h4 class="subheader">
+          Every now and then I would work on random ideas which also allows me
+          to test new prototyping softwares.
+        </h4>
       </div>
 
-      <div class="column  nohover">
-        <img class="gif progressive__img progressive--not-loaded" 
-        data-progressive="Gifs/04.gif"
-        src="Images/gif-04-s.jpg" />
-      </div>
-      <div class="column middle  nohover">
-        <img class="gif progressive__img progressive--not-loaded"
-        data-progressive="Gifs/05.gif"
-        src="Images/gif-05-s.jpg" />
-      </div>
-      <div class="column  nohover">
-        <img class="gif progressive__img progressive--not-loaded" 
-        data-progressive="Gifs/06.gif"
-        src="Images/gif-06-s.jpg" />
-      </div>
+      <!-- Grid -->
+      <div class="grid">
+        <div class="column nohover">
+          <img
+            class="gif progressive__img progressive--not-loaded"
+            data-progressive="Gifs/01.gif"
+            src="Images/gif-01-s.jpg"
+          />
+        </div>
+        <div class="column middle nohover">
+          <img
+            class="gif progressive__img progressive--not-loaded"
+            data-progressive="Gifs/02.gif"
+            src="Images/gif-02-s.jpg"
+          />
+        </div>
+        <div class="column nohover">
+          <img
+            class="gif progressive__img progressive--not-loaded"
+            data-progressive="Gifs/03.gif"
+            src="Images/gif-03-s.jpg"
+          />
+        </div>
 
-      <div class="column nohover">
-        <img class="gif progressive__img progressive--not-loaded"
-        data-progressive="Gifs/07.gif"
-        src="Images/gif-07-s.jpg" />
+        <div class="column nohover">
+          <img
+            class="gif progressive__img progressive--not-loaded"
+            data-progressive="Gifs/04.gif"
+            src="Images/gif-04-s.jpg"
+          />
+        </div>
+        <div class="column middle nohover">
+          <img
+            class="gif progressive__img progressive--not-loaded"
+            data-progressive="Gifs/05.gif"
+            src="Images/gif-05-s.jpg"
+          />
+        </div>
+        <div class="column nohover">
+          <img
+            class="gif progressive__img progressive--not-loaded"
+            data-progressive="Gifs/06.gif"
+            src="Images/gif-06-s.jpg"
+          />
+        </div>
+
+        <div class="column nohover">
+          <img
+            class="gif progressive__img progressive--not-loaded"
+            data-progressive="Gifs/07.gif"
+            src="Images/gif-07-s.jpg"
+          />
+        </div>
+        <div class="column nohover">
+          <img
+            class="gif progressive__img progressive--not-loaded"
+            data-progressive="Gifs/08.gif"
+            src="Images/gif-08-s.jpg"
+          />
+        </div>
+        <div class="column nohover">
+          <img
+            class="gif progressive__img progressive--not-loaded"
+            data-progressive="Gifs/09.gif"
+            src="Images/gif-09-s.jpg"
+          />
+        </div>
       </div>
-      <div class="column nohover">
-        <img class="gif progressive__img progressive--not-loaded" 
-        data-progressive="Gifs/08.gif"
-        src="Images/gif-08-s.jpg"/>
-      </div>
-      <div class="column nohover">
-        <img class="gif progressive__img progressive--not-loaded" 
-        data-progressive="Gifs/09.gif"
-        src="Images/gif-09-s.jpg" />
-      </div>
-    </div>
     </div>
 
     <footer>
@@ -170,18 +187,17 @@
           </svg>
         </a>
       </div>
-      <span class="copyright">Teo Ren Zhong John © 2020</span>
+      <span class="copyright">Designed and coded by John © 2020</span>
     </footer>
 
     <script src="https://unpkg.com/progressively/dist/progressively.min.js"></script>
     <script>
       progressively.init({
         delay: 0,
-        onLoadComplete: function() {
+        onLoadComplete: function () {
           console.log("All images loaded!");
-        }
+        },
       });
     </script>
-
   </body>
 </html>
