--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
           <div class="mainworktext">
             <span>Interaction design</span>
             <h2>
-              A learning platform to uplift digital maturity across an
+              Learning platform to uplift digital maturity across an
               organisation
             </h2>
-            <h6>Read the case study ></h6>
+            <h6>Read the case study →</h6>
           </div>
           <img src="Images/switch-00.png" />
         </div>
@@ -68,10 +68,10 @@
           <div class="mainworktext">
             <span>Interaction design</span>
             <h2>
-              A descriptive analytics platform for employees to make informed
+              Descriptive analytics platform for employees to make informed
               decisions and coordinate actions
             </h2>
-            <h6>Read the case study ></h6>
+            <h6>Read the case study →</h6>
           </div>
           <img src="Images/oilandgas-00.png" />
         </div>
@@ -83,7 +83,7 @@
           <div class="mainworktext">
             <span>Interaction design</span>
             <h2>Redesigning the ATM user interface for DBS</h2>
-            <h6>Read the case study ></h6>
+            <h6>Read the case study →</h6>
           </div>
           <img src="Images/dbs-00.png" />
         </div>
@@ -202,7 +202,7 @@
           </svg>
         </a>
       </div>
-      <span class="copyright">Teo Ren Zhong John © 2020</span>
+      <span class="copyright">Designed and coded by John © 2020</span>
     </footer>
 
     <script src="https://unpkg.com/progressively/dist/progressively.min.js"></script>
