--- a/pivot.html
+++ b/pivot.html
@@ -167,6 +167,10 @@
     </div>
     </div>
     </div>
+       <div class="nextproject2">
+         <a href="switch.html"><h4>← Upskilling Digital Proficiency</h4></a>
+      <a href="dbs.html"><h4>Redesigning the ATM →</h4></a>
+    </div>
     <footer>
       <div>
         <a
@@ -231,7 +235,7 @@
           </svg>
         </a>
       </div>
-      <span class="copyright">Teo Ren Zhong John © 2020</span>
+      <span class="copyright">Designed and coded by John © 2020</span>
     </footer>
 
     <script src="https://unpkg.com/progressively/dist/progressively.min.js"></script>
