--- a/switch.html
+++ b/switch.html
@@ -6,21 +6,21 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
-    <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <title>John Teo Portfolio</title>
     <!-- Title is the name you see on the tab/link -->
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap"
-      rel="stylesheet" 
+      rel="stylesheet"
       type="text/css"
     />
     <link rel="stylesheet" href="progressively.css" />
   </head>
 
   <!-- Body is the content that people see on the website -->
-  <body style="max-width:960px">
+  <body style="max-width: 960px">
     <nav>
       <div class="navcontent">
         <div>
@@ -43,142 +43,187 @@
       </div>
     </nav>
     <div class="nothome">
-    <div class="projectheader">
+      <div class="projectheader">
         <h4>CASE STUDY - 2019</h4>
         <h1>Upskilling Digital Proficiency</h1>
-        <img class="progressive__img progressive--not-loaded"
-        data-progressive="Images/switch-01.png"
-        src="Images/switch-01-s.jpg"/>
-    </div>
-    <div class="projectinfo">
+        <img
+          class="progressive__img progressive--not-loaded"
+          data-progressive="Images/switch-01.png"
+          src="Images/switch-01-s.jpg"
+        />
+      </div>
+      <div class="projectinfo">
         <div class="mainbody-01">
-            <p>Switch is a learning platform that aims to upskill employees 
-              in this period of digital transformation. Topics such as data analytics, 
-              cybersecurity, and ongoing digital initiatives are introduced in short-form 
-              content to make it engaging and easily digestible for users. Additionally, 
-              users can test their understanding by taking on challenges that earn 
-              them points and a placing on the leaderboard.</p>
+          <p>
+            Switch is a learning platform that aims to upskill employees in this
+            period of digital transformation. Topics such as data analytics,
+            cybersecurity, and ongoing digital initiatives are introduced in
+            short-form content to make it engaging and easily digestible for
+            users. Additionally, users can test their understanding by taking on
+            challenges that earn them points and a placing on the leaderboard.
+          </p>
         </div>
         <div class="projectstatus">
-            <p class="primarydetails">My Role</p>
-            <p class="secondarydetails">Research <br> Wireframing <br> Prototyping <br> User Testing</p>
-            <p class="primarydetails">Team</p>
-            <p class="secondarydetails">Fjord Singapore</p>
+          <p class="primarydetails">My Role</p>
+          <p class="secondarydetails">
+            Research <br />
+            Wireframing <br />
+            Prototyping <br />
+            User Testing
+          </p>
+          <p class="primarydetails">Team</p>
+          <p class="secondarydetails">Fjord Singapore</p>
         </div>
-    </div>
-    <h5 class="grey">THE CHALLENGE</h5>
-    <div class="mainbody-06">
-        <h2>Redesign Switch to make the application more delightful and intuitive</h2>
-    </div>
-    <div class="projectprogress">
+      </div>
+      <h5 class="grey">THE CHALLENGE</h5>
+      <div class="mainbody-06">
+        <h2>
+          Redesign Switch to make the application more delightful and intuitive
+        </h2>
+      </div>
+      <div class="projectprogress">
         <div class="projecttitle">
-            <h3>Glimpse into the Process</h3>
+          <h3>Glimpse into the Process</h3>
         </div>
         <div class="mainbody-02">
-            <p>After 2 years of daily publishing, the content had outgrown the original 
-              frame and users found it increasingly hard to find the content. With an 
-              ever-growing content, the platform needed a reboot. This included fixing the 
-              navigation and content structure, refreshing the visuals and aligning the 
-              experience for mobile, tablet and desktop.</p>
-            <h5 class="grey">CARD SORTING</h5> 
-            <p class ="spacing">To understand users’ mental models, an open card sort 
-              was conducted for both existing features and content. Coming from different 
-              business units, management levels and usage of the application, a total of 25 
-              people participated in the card sorting exercise.</p>
-            <p>We realized that users who were less familiar with the application 
-              (and some who were) made a distinction between learning and testing content, 
-              giving the latter its category with labels like "test time” or “brainteasers”. 
-              Previously, there was no clear segregation between the content types.</p>
+          <p>
+            After 2 years of daily publishing, the content had outgrown the
+            original frame and users found it increasingly hard to find the
+            content. With an ever-growing content, the platform needed a reboot.
+            This included fixing the navigation and content structure,
+            refreshing the visuals and aligning the experience for mobile,
+            tablet and desktop.
+          </p>
+          <h5 class="grey">CARD SORTING</h5>
+          <p class="spacing">
+            To understand users’ mental models, an open card sort was conducted
+            for both existing features and content. Coming from different
+            business units, management levels and usage of the application, a
+            total of 25 people participated in the card sorting exercise.
+          </p>
+          <p>
+            We realized that users who were less familiar with the application
+            (and some who were) made a distinction between learning and testing
+            content, giving the latter its category with labels like "test time”
+            or “brainteasers”. Previously, there was no clear segregation
+            between the content types.
+          </p>
         </div>
-    </div>
-    <div class="rightcontainer">
-        <img 
-        class="captionmb progressive__img progressive--not-loaded" 
-        data-progressive="Images/switch-02.png"
-        src="Images/switch-02-s.jpg">
+      </div>
+      <div class="rightcontainer">
+        <img
+          class="captionmb progressive__img progressive--not-loaded"
+          data-progressive="Images/switch-02.png"
+          src="Images/switch-02-s.jpg"
+        />
         <span>Features card sorting</span>
-    </div>
-    <div class="mainbody-03">
-        <h5 class="grey">THE VISUALS</h5> 
-        <p>As part of the card sorting exercise, we also asked the participants to give us 
-          their candid thoughts on what Switch meant to them and what values it conveyed. 
-          A separate brand exercise was also conducted with upper management to describe what 
-          Switch is and what it should be. Based on all the sessions we’ve conducted, and our 
-          own interpretations, we came up with three directions, inspired primarily by the topic of 
-          learning. This was later distilled down to a single visual direction with further input 
-          from the product owner.</p>
-    </div>
-    <div class="rightcontainer">
-        <img class="captionmb progressive__img progressive--not-loaded"
-        data-progressive="Images/switch-03.png"
-        src="Images/switch-03-s.jpg">
+      </div>
+      <div class="mainbody-03">
+        <h5 class="grey">THE VISUALS</h5>
+        <p>
+          As part of the card sorting exercise, we also asked the participants
+          to give us their candid thoughts on what Switch meant to them and what
+          values it conveyed. A separate brand exercise was also conducted with
+          upper management to describe what Switch is and what it should be.
+          Based on all the sessions we’ve conducted, and our own
+          interpretations, we came up with three directions, inspired primarily
+          by the topic of learning. This was later distilled down to a single
+          visual direction with further input from the product owner.
+        </p>
+      </div>
+      <div class="rightcontainer">
+        <img
+          class="captionmb progressive__img progressive--not-loaded"
+          data-progressive="Images/switch-03.png"
+          src="Images/switch-03-s.jpg"
+        />
         <span>Chosen visual direction for Switch</span>
-    </div>
-    <div class="mainbody-03">
-        <h5 class="grey">PROTOTYPING</h5> 
-        <p>Working as a team, paper prototypes were a quick way of bouncing ideas off each other, 
-          testing initial flows and concepts. This helped the team to move faster as everyone 
-          was aligned in what we were trying to accomplish during the sprint. Throughout this time, 
-          the designs were constantly printed out for others to comment and give feedback.</p>
-    </div>
-    <div class="rightcontainer">
-        <img class="captionmb progressive__img progressive--not-loaded" 
-        data-progressive="Images/switch-04.png"
-        src="Images/switch-04-s.jpg">
+      </div>
+      <div class="mainbody-03">
+        <h5 class="grey">PROTOTYPING</h5>
+        <p>
+          Working as a team, paper prototypes were a quick way of bouncing ideas
+          off each other, testing initial flows and concepts. This helped the
+          team to move faster as everyone was aligned in what we were trying to
+          accomplish during the sprint. Throughout this time, the designs were
+          constantly printed out for others to comment and give feedback.
+        </p>
+      </div>
+      <div class="rightcontainer">
+        <img
+          class="captionmb progressive__img progressive--not-loaded"
+          data-progressive="Images/switch-04.png"
+          src="Images/switch-04-s.jpg"
+        />
         <span>Quick and dirty prototypes</span>
-    </div>
-    <div class="mainbody-03">
-        <h5 class="grey">USER TESTING</h5> 
-        <p>Every 3 weeks, these prototypes were shown to users to test and gather feedback on 
-          the new changes. In the hour-long sessions, users were provided with a serious of tasks 
-          (E.g. Complete the lesson and leave a comment). Based on their actions, questions were 
-          posed to better understand their thought processes and how they would improve the current design.</p>
-    </div>
-    <div class="rightcontainer">
-        <img class="captionmb progressive__img progressive--not-loaded" 
-        data-progressive="Images/switch-05.png"
-        src="Images/switch-05-s.jpg">
+      </div>
+      <div class="mainbody-03">
+        <h5 class="grey">USER TESTING</h5>
+        <p>
+          Every 3 weeks, these prototypes were shown to users to test and gather
+          feedback on the new changes. In the hour-long sessions, users were
+          provided with a serious of tasks (E.g. Complete the lesson and leave a
+          comment). Based on their actions, questions were posed to better
+          understand their thought processes and how they would improve the
+          current design.
+        </p>
+      </div>
+      <div class="rightcontainer">
+        <img
+          class="captionmb progressive__img progressive--not-loaded"
+          data-progressive="Images/switch-05.png"
+          src="Images/switch-05-s.jpg"
+        />
         <span>Testing out the new designs</span>
-    </div>
-    <h3>The Design</h3>
-    <div class="projectdesign-01">
+      </div>
+      <h3>The Design</h3>
+      <div class="projectdesign-01">
         <div class="designpicture-01">
-            <img class="imageflush"
-            src="Images/switch-06.png"/>
+          <img class="imageflush" src="Images/switch-06.png" />
         </div>
         <div class="mainbody-04">
-            <p>From mobile to tablet to desktop, we had to ensure the experience was standardized. 
-              This meant optimizing the experience for each device while taking into consideration 
-              asset management, device performance and time for development.</p>
+          <p>
+            From mobile to tablet to desktop, we had to ensure the experience
+            was standardized. This meant optimizing the experience for each
+            device while taking into consideration asset management, device
+            performance and time for development.
+          </p>
         </div>
-    </div>
-    <div class="projectdesign-02">
+      </div>
+      <div class="projectdesign-02">
         <div class="mainbody-05">
-            <p>To our surprise, the leaderboard was very popular and users made it a habit to learn 
-              every day to climb up the leaderboard. However, many users also felt deflated as the 
-              top learners were seemingly out of reach. Therefore, seasonal and event leaderboards 
-              were added to foster healthy competition while giving every user a fair chance to 
-              compete with each other.</p>
+          <p>
+            To our surprise, the leaderboard was very popular and users made it
+            a habit to learn every day to climb up the leaderboard. However,
+            many users also felt deflated as the top learners were seemingly out
+            of reach. Therefore, seasonal and event leaderboards were added to
+            foster healthy competition while giving every user a fair chance to
+            compete with each other.
+          </p>
         </div>
         <div class="designpicture-01">
-            <img class="imageflush" 
-            src="Gifs/switch-07.gif"/>
+          <img class="imageflush" src="Gifs/switch-07.gif" />
         </div>
+      </div>
+      <div class="projectdesign-01">
+        <div class="designpicture-01">
+          <img class="imageflush" src="Gifs/switch-08.gif" />
+        </div>
+        <div class="mainbody-04">
+          <p>
+            Many of the leaders were interested to see the engagement with the
+            platform. Therefore, a dashboard view was created within PowerBI.
+            The interface was designed to show a summary of all key data points
+            on a single desktop screen. Thus in a glance, the leaders could have
+            an overall picture of their respective departments with the option
+            to dive deeper if they wanted to.
+          </p>
+        </div>
+      </div>
     </div>
-    <div class="projectdesign-01">
-            <div class="designpicture-01">
-                <img class="imageflush" 
-                src="Gifs/switch-08.gif">
-            </div>
-            <div class="mainbody-04">
-                <p>Many of the leaders were interested to see the engagement with the platform. 
-                  Therefore, a dashboard view was created within PowerBI. The interface was designed 
-                  to show a summary of all key data points on a single desktop screen. Thus in a 
-                  glance, the leaders could have an overall picture of their respective departments 
-                  with the option to dive deeper if they wanted to.</p>
-            </div>
+    <div class="nextproject">
+      <a href="pivot.html"><h4>Visualising data →</h4></a>
     </div>
-  </div>
     <footer>
       <div>
         <a
@@ -243,18 +288,17 @@
           </svg>
         </a>
       </div>
-      <span class="copyright">Teo Ren Zhong John © 2020</span>
+      <span class="copyright">Designed and coded by John © 2020</span>
     </footer>
 
     <script src="https://unpkg.com/progressively/dist/progressively.min.js"></script>
     <script>
       progressively.init({
         delay: 0,
-        onLoadComplete: function() {
+        onLoadComplete: function () {
           console.log("All images loaded!");
-        }
+        },
       });
     </script>
-
   </body>
 </html>
