--- a/airline.html
+++ b/airline.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
-    <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <title>John Teo Portfolio</title>
     <!-- Title is the name you see on the tab/link -->
@@ -20,7 +20,7 @@
   </head>
 
   <!-- Body is the content that people see on the website -->
-  <body style="max-width:960px">
+  <body style="max-width: 960px">
     <nav>
       <div class="navcontent">
         <div>
@@ -43,139 +43,148 @@
       </div>
     </nav>
     <div class="nothome">
-    <div class="projectheader">
-      <h4>CASE STUDY - 2018</h4>
-      <h1>A Beacon for Better <br />Customer Experience</h1>
-      <img class="progressive__img progressive--not-loaded"
-      data-progressive="Images/airline-01.jpg"
-      src="Images/airline-01-s.jpg" />
-    </div>
-    <div class="projectinfo">
-      <div class="mainbody-01">
+      <div class="projectheader">
+        <h4>CASE STUDY - 2018</h4>
+        <h1>A Beacon for Better <br />Customer Experience</h1>
+        <img
+          class="progressive__img progressive--not-loaded"
+          data-progressive="Images/airline-01.jpg"
+          src="Images/airline-01-s.jpg"
+        />
+      </div>
+      <div class="projectinfo">
+        <div class="mainbody-01">
+          <p>
+            Beacon was a three-month engagement to help an airline navigate
+            through the complexities of the aviation business with the business
+            in mind and with the traveler at heart; uncovering the different
+            types of customer that they serve, along with their needs, pain
+            points and behaviors across the end to end travel journey.
+            Meanwhile, developing their internal customer experience and service
+            design capabilities, training a team in service design and research
+            methodologies.
+          </p>
+        </div>
+        <div class="projectstatus">
+          <p class="primarydetails">My Role</p>
+          <p class="secondarydetails">Research <br />Visualisation</p>
+          <p class="primarydetails">Team</p>
+          <p class="secondarydetails">Fjord Singapore</p>
+        </div>
+      </div>
+      <h5 class="grey">THE CHALLENGE</h5>
+      <div class="mainbody-06">
+        <h2>
+          How might we better understand the airline’s customers today, so that
+          we can design products and services they truly desire and align our
+          business units to deliver them?
+        </h2>
+      </div>
+      <div class="projectprogress">
+        <div class="projecttitle">
+          <h3>Glimpse into the Process</h3>
+        </div>
+        <div class="mainbody-02">
+          <p>
+            As part of the engagement, the Fjord and Customer Experience team
+            worked closely together to transfer and cross-pollinate design
+            thinking skills and domain-specific knowledge. Specifically for the
+            Customer Experience team, it was to have a better understanding of
+            how best to use ‘Design Thinking’ methods within the wider
+            organization, empowering them to take ownership of the customer
+            experience and be the voice of the customer in current and future
+            projects.
+          </p>
+          <h5 class="grey">STARTING FROM THE BASICS</h5>
+          <p>
+            From creating discussion guides to interviewing customers to
+            synthesizing the findings, the Customer Experience team was taught
+            on the intricacies of the design process. This often started as a
+            mini theory session before doing hands-on practice in the field.
+            Side by side, both teams conducted field observations at the lounges
+            and service centers, interviewing stakeholders, staff and customers
+            to get a better understanding of the needs and pain points of both
+            the business and the customers they served.
+          </p>
+        </div>
+      </div>
+      <div class="rightcontainer">
+        <img
+          class="captionmb progressive__img progressive--not-loaded"
+          data-progressive="Images/airline-02.png"
+          src="Images/airline-02-s.jpg"
+        />
+        <span>Observing and interviewing staff and customers</span>
+      </div>
+      <div class="mainbody-03">
         <p>
-          Beacon was a three-month engagement to help an airline 
-          navigate through the complexities of the aviation business 
-          with the business in mind and with the traveler at heart; uncovering 
-          the different types of customer that they serve, along with their 
-          needs, pain points and behaviors across the end to end travel journey. 
-          Meanwhile, developing their internal customer experience and service 
-          design capabilities, training a team in service design and research methodologies.
+          The research accumulated to 5 high-level themes which were later
+          introduced to the staff in a workshop where we brought together
+          multiple customer service and product development business units.
+          Through this process, the organization reached a common understanding
+          of their customers and their journeys, coming up with several service
+          concepts that were taken to cross-functional teams.
         </p>
       </div>
-      <div class="projectstatus">
-        <p class="primarydetails">My Role</p>
-        <p class="secondarydetails">Research <br />Visualisation</p>
-        <p class="primarydetails">Team</p>
-        <p class="secondarydetails">Fjord Singapore</p>
+      <div class="rightcontainer">
+        <img
+          class="captionmb progressive__img progressive--not-loaded"
+          data-progressive="Images/airline-03.png"
+          src="Images/airline-03-s.jpg"
+        />
+        <span>Bringing the organisation together for a workshop</span>
       </div>
-    </div>
-    <h5 class="grey">THE CHALLENGE</h5>
-    <div class="mainbody-06">
-      <h2>
-        How might we better understand the airline’s customers today, so that we
-        can design products and services they truly desire and align our
-        business units to deliver them?
-      </h2>
-    </div>
-    <div class="projectprogress">
-      <div class="projecttitle">
-        <h3>Glimpse into the Process</h3>
-      </div>
-      <div class="mainbody-02">
-        <p>
-          As part of the engagement, the Fjord and Customer Experience team
-          worked closely together to transfer and cross-pollinate design
-          thinking skills and domain-specific knowledge. Specifically for the
-          Customer Experience team, it was to have a better understanding of how
-          best to use ‘Design Thinking’ methods within the wider organization,
-          empowering them to take ownership of the customer experience and be
-          the voice of the customer in current and future projects.
-        </p>
-        <h5 class="grey">STARTING FROM THE BASICS</h5>
-        <p>
-          From creating discussion guides to interviewing customers to
-          synthesizing the findings, the Customer Experience team was taught on
-          the intricacies of the design process. This often started as a
-          mini theory session before doing hands-on practice in the field. Side
-          by side, both teams conducted field observations at the lounges and
-          service centers, interviewing stakeholders, staff and customers to get
-          a better understanding of the needs and pain points of both the
-          business and the customers they served.
-        </p>
-      </div>
-    </div>
-    <div class="rightcontainer">
-      <img class="captionmb progressive__img progressive--not-loaded" 
-      data-progressive="Images/airline-02.png"
-      src="Images/airline-02-s.jpg" />
-      <span>Observing and interviewing staff and customers</span>
-    </div>
-    <div class="mainbody-03">
-      <p>
-        The research accumulated to 5 high-level themes which were later
-        introduced to the staff in a workshop where we brought together multiple
-        customer service and product development business units. Through this
-        process, the organization reached a common understanding of their
-        customers and their journeys, coming up with several service concepts
-        that were taken to cross-functional teams.
-      </p>
-    </div>
-    <div class="rightcontainer">
-      <img class="captionmb progressive__img progressive--not-loaded" 
-      data-progressive="Images/airline-03.png"
-      src="Images/airline-03-s.jpg" />
-      <span>Bringing the organisation together for a workshop</span>
-    </div>
 
-    <h3>The Design</h3>
-    <div class="projectdesign-01">
-      <div class="designpicture-01">
-        <img class="imageflush" 
-        src="Images/airline-04.jpg" />
+      <h3>The Design</h3>
+      <div class="projectdesign-01">
+        <div class="designpicture-01">
+          <img class="imageflush" src="Images/airline-04.jpg" />
+        </div>
+        <div class="mainbody-04">
+          <p>
+            7 high-value service concepts were crafted collaboratively and taken
+            into refinement. These concepts ranged from enhancing the inflight
+            entertainment system to a new policy that empowered staff to make
+            exceptions. Each service concept tackled several pain points that
+            were identified during the research and how it would bring value to
+            the business. <br /><br />Update: The airline took forward 3
+            concepts and is currently testing it in the field.
+          </p>
+        </div>
       </div>
-      <div class="mainbody-04">
-        <p>
-          7 high-value service concepts were crafted collaboratively and taken
-          into refinement. These concepts ranged from enhancing the inflight
-          entertainment system to a new policy that empowered staff to make
-          exceptions. Each service concept tackled several pain points that were
-          identified during the research and how it would bring value to the
-          business. <br /><br />Update: The airline took forward 3 concepts and
-          is currently testing it in the field.
-        </p>
+      <div class="projectdesign-02">
+        <div class="mainbody-05">
+          <p>
+            Taking into consideration the company’s core values, 6 design
+            principles were created to help establish a framework for future
+            decision making. Each design principle was further illustrated on
+            what it meant for the product, people and process.
+          </p>
+        </div>
+        <div class="designpicture-01">
+          <img class="imageflush" src="Images/airline-05.jpg" />
+        </div>
       </div>
-    </div>
-    <div class="projectdesign-02">
-      <div class="mainbody-05">
-        <p>
-          Taking into consideration the company’s core values, 6 design principles 
-          were created to help establish a framework for future decision making. 
-          Each design principle was further illustrated on what it meant for the 
-          product, people and process.
-        </p>
-      </div>
-      <div class="designpicture-01">
-        <img class="imageflush" 
-        src="Images/airline-05.jpg" />
-      </div>
-    </div>
-    <div class="projectdesign-01">
-      <div class="designpicture-01">
-        <img class="imageflush" 
-        src="Images/airline-06.jpg" />
-      </div>
-      <div class="mainbody-04">
-        <p>
-          Due to the complexity of the industry and silos within the
-          organization, it was rare for a person to have a complete picture.
-          Therefore, a living service blueprint was created to have a unified
-          view on the backstage processes on how services were orchestrated
-          between the different business units and the various dependecies in
-          the system. Additionally, the blueprint was created to be editable so
-          that the team could continuously update it.
-        </p>
+      <div class="projectdesign-01">
+        <div class="designpicture-01">
+          <img class="imageflush" src="Images/airline-06.jpg" />
+        </div>
+        <div class="mainbody-04">
+          <p>
+            Due to the complexity of the industry and silos within the
+            organization, it was rare for a person to have a complete picture.
+            Therefore, a living service blueprint was created to have a unified
+            view on the backstage processes on how services were orchestrated
+            between the different business units and the various dependecies in
+            the system. Additionally, the blueprint was created to be editable
+            so that the team could continuously update it.
+          </p>
+        </div>
       </div>
     </div>
+    <div class="nextproject2">
+      <a href="home.html"><h4>← Connected-homes in Asia Pacific</h4></a>
+      <a href="aubergine.html"><h4>Comfort in a Puff →</h4></a>
     </div>
     <footer>
       <div>
@@ -241,18 +250,17 @@
           </svg>
         </a>
       </div>
-      <span class="copyright">Teo Ren Zhong John © 2020</span>
+      <span class="copyright">Designed and coded by John © 2020</span>
     </footer>
 
     <script src="https://unpkg.com/progressively/dist/progressively.min.js"></script>
     <script>
       progressively.init({
         delay: 0,
-        onLoadComplete: function() {
+        onLoadComplete: function () {
           console.log("All images loaded!");
-        }
+        },
       });
     </script>
-    
   </body>
 </html>
